css/styles.css
/*Fonts*/
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@500&display=swap');
/* base style or utilitis */
body{
    font-family: 'Poppins', sans-serif;
    background-color: #F3F1FF;
}
h1,h2,h3,h4,h5,h6{
    font-family: 'Roboto', sans-serif;    
    font-weight: 500;
}
main{
    display: flex;
    flex-direction: column;
    align-items: center;
}
.container{
    background-color: #fff;
    width: 870px;
    padding: 33px 30px 42px 30px;
    border-radius: 5px;
    margin-top: 21px;
}
hr{
    border: 1px solid #d1d1d1;
    margin-bottom: 27px;
}
/** Top players **/
.top-players{
    margin-bottom: 30px;
}
.players{
    display: grid;
    grid-template-columns: repeat(3,1fr);
    /* grid-template-columns: 1fr 1fr 1fr;  */
    grid-row-gap: 30px;
}
.section-title{
    color: #562EFF;
    font-size: 24px;
    margin-top: 3px;
}
.player{
    display: flex;
    align-items: center;
}
.player img{
    width: 56px;
    height: 56px;
}
.player-name{
    margin-left: 16px;
    font-size: 18px;    
    font-family: 'Poppins', sans-serif;
}
/*------------------
Top Blogs Styles
******************/
.blogs{
    display: grid;
    grid-template-columns: repeat(2, 1fr);
    grid-row-gap: 26px;
}
.blog{
    display: flex;
}
.blog img{
    width: 177px;
    height: 117px;
}
.blog-info{
    margin-left: 16px;
}
.blog-title{
    font-size: 20px;
    font-family: 'Poppins', sans-serif;
}
.blog-author{
    color: #9f9f9f;
    font-size: 16px;
}
.blog-author a{
    text-decoration: none;
    color: #562eff;
    font-size: 16px;
    
}
/*-------------
Courses Style
----------*/
.courses{
    display: grid;
    grid-template-columns: repeat(3, 1fr);
    grid-column-gap: 24px;
}
.course{
    padding: 13px 11px;
    box-shadow: 0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05);
    border-radius: 15px;
}
.course-banner img{
    width: 224px;
    height: 124px;
}
.course-title{
    font-size: 20px;
    color: #1E1E1E;
}
.course-instractor{
    color: #ED6B4F;
    font-size: 15px;
}
.course-info{
    display: flex;
    align-items: center;
    justify-content: space-between;
}
.fa-star{
    font-size: 12px;
}
.fa-star.filled{
    color: #FFC014;
}
.fa-star.empty, .empty+span{
    color: #AEAEAE;
}
.course-duration{
    width: 95px;
    height: 30px;
    background-color: #FFE4E8;
    border-radius: 15px;
    font-size: 15px;
    color: #FF4A60;
    font-weight: 600;
    line-height: 30px;
    padding: 0 6px;
    text-align: center;
}
/*------------------
Footer
--------------------*/
footer{
    text-align: center;
    padding: 30px 0;
    opacity: .7;
    box-shadow: 0px 5.34229px 13.3557px rgba(0, 0, 0, 0.05);
}
/***********************
Media Queries
************************/

/* Mobile devices*/
@media only screen and (max-width: 688px) {
    .container{
        width: 100%;
    }
    .players, .blogs, .courses{
       grid-template-columns: repeat(1, 1fr);
    }
    .player, .blog, .course{
        flex-direction: column;
        align-items: center;
    }
    .course-banner{
        text-align: center;
    }
}
/* Tablet devices */
@media only screen and (min-width: 689px) and (max-width: 991px) {
    .container{
        width: 80%;
    }
    .players, .courses{
       grid-template-columns: repeat(2, 1fr);
    }
    .blogs{
        grid-template-columns: repeat(1, 1fr);
    }
    .player, .course{
        flex-direction: column;
        align-items: center;
    }    
    .course-banner{
        text-align: center;
    }
}

